--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
 
         <button class="settings__btn"><i class="fa-solid fa-gear"></i></button>
-        <section class="settings">
+        <section class="settings oculto">
             <form action="">
                 <div class="settings__header">
                     <h2>Settings</h2>
