--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="" class="nav__link active">pomodoro</a>
             <a href="" class="nav__link">short break</a>
             <a href="" class="nav__link">long break</a>
-            </ul>
+            
         </nav>
     </header>
     <main class="main">
@@ -32,7 +32,7 @@
         </section>
 
         <button class="settings__btn"><i class="fa-solid fa-gear"></i></button>
-        <section class="settings oculto">
+        <section class="settings">
             <form action="">
                 <div class="settings__header">
                     <h2>Settings</h2>
@@ -74,6 +74,7 @@
                 </div>
                 <div class="settings__font">
                     <h3 class="font__title">Font</h3>
+                   <div>
                     <div>
                         <input class="font__input" type="radio" value="" name="font" id="font">
                         <label for="font" class="font__label active">Aa</label>
@@ -86,6 +87,8 @@
                         <input class="font__input" type="radio" value="san-serif" name="font" id="font-3">
                         <label for="font" class="font__label">Aa</label>
                     </div>
+                   </div>
+                   
                 </div>
                 <div class="settings__color">
                     <h3 class="font__title">color</h3>
