--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <h3 class="font__title">Font</h3>
                     <div class="fonts__container">
                         <div>
-                            <input class="font__input" type="radio" name="fontes" value="font" id="roboto" data-input="fonte">
+                            <input class="font__input" type="radio" name="fontes" value="font" id="roboto" data-input="fonte" checked>
                             <label for="roboto" class="font__label active" id="font-label">Aa</label>
                         </div>
                         <div>
@@ -98,7 +98,7 @@
                             <label for="green" class="color__label op_1 check" id="green-label"></label>
                         </div>
                         <div>
-                            <input class="color__input" type="radio" value="rosa" name="color" id="rosa" data-input="cor">
+                            <input class="color__input" type="radio" value="rosa" name="color" id="rosa" data-input="cor" checked>
                             <label for="rosa" class="color__label op_2 " id="rosa-label"></label>
                         </div>
                         <div>
@@ -108,15 +108,15 @@
                     </div>
 
                 </div>
-                <button class="settings-btn__aply" type="submit">Apply</button>
+                <button class="settings-btn__aply" id="aply" >Apply</button>
             </form>
         </section>
     </main>
     <footer class="footer">
 
     </footer>
-    <script src="assets/js/timer.js"></script>
     <script src="assets/js/settings.js"></script>
+    <script src="assets/js/timer.js"></script>
 </body>
 
 </html>
