--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <h1 class="header__title">Pomodoro</h1>
         <nav class="header__nav container">
 
-            <a href="" class="nav__link active rosa">pomodoro</a>
-            <a href="" class="nav__link">short break</a>
-            <a href="" class="nav__link">long break</a>
+            <a class="nav__link active rosa" data-link="pomodoro">pomodoro</a>
+            <a class="nav__link" data-link="shortBreak">short break</a>
+            <a class="nav__link" data-link="longBreak">long break</a>
 
         </nav>
     </header>
@@ -117,6 +117,7 @@
     </footer>
     <script src="assets/js/settings.js"></script>
     <script src="assets/js/timer.js"></script>
+    <script src="assets/js/header.js"></script>
 </body>
 
 </html>
