validação do form

--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
                     </div>
 
                 </div>
-                <button class="settings-btn__aply" id="aply" >Apply</button>
+                <button class="settings-btn__aply" id="aply" type="submit" >Apply</button>
             </form>
+            <audio id="audio" src="assets/audio/bbc_clocks---c_07022197.mp3"></audio>
         </section>
     </main>
     <footer class="footer">
