alterando classe inicial label cor

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                     <div class="color-inputs-container">
                         <div>
                             <input class="color__input" type="radio" value="green" name="color" id="green" data-input="cor">
-                            <label for="green" class="color__label op_1 check" id="green-label"></label>
+                            <label for="green" class="color__label op_1 " id="green-label"></label>
                         </div>
                         <div>
                             <input class="color__input" type="radio" value="rosa" name="color" id="rosa" data-input="cor" checked>
-                            <label for="rosa" class="color__label op_2 " id="rosa-label"></label>
+                            <label for="rosa" class="color__label op_2 check" id="rosa-label"></label>
                         </div>
                         <div>
                             <input class="color__input" type="radio" value="roxo" name="color" id="roxo" data-input="cor">
